Add many new tasks 6

--- a/live-coding/pom.xml
+++ b/live-coding/pom.xml
@@ -13,4 +13,12 @@
     <artifactId>live-coding</artifactId>
     <name>Live Coding tasks with solutions</name>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+    </dependencies>
+
 </project>
